Linked CSS and added header

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Home | Bigfoot Music Management</title>
+    <title>Bigfoot Music Management | Home</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    
+    <header class="header">
+      <a href="https://wearebigfoot.com">
+        <div class="header__logo">
+          <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
+        </div>
+        <div class="header__title-container">
+          <div class="header__title">
+            <h1>Bigfoot</h1>
+            <h2>Artist & Music Management</h2>
+          </div>
+        </div>
+      </a>
+    </header>
   </body>
 </html>
