--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
         </div>
       </a>
     </header>
+    <main>
+      <div class="artist-section artist-section-1">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Adam Beyer</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-adam-beyer"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-adam-beyer img-sm"></div>
+        </a>
+      </div>
+    </main>
   </body>
 </html>
