--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header class="header">
+    <header class="header home-page__header">
       <a href="https://wearebigfoot.com">
         <div class="header__logo">
           <img src="https://wearebigfoot.com/src/gfx/mark.svg" alt="logo">
@@ -20,7 +20,7 @@
         </div>
       </a>
     </header>
-    <main>
+    <main class="home-page__main">
       <div class="artist-section artist-section-1">
         <a href="#!">
           <div class="artist-section__title">
@@ -31,6 +31,74 @@
           <div class="artist-section__img artist-section__img-sm img-sm-adam-beyer img-sm"></div>
         </a>
       </div>
+      <div class="artist-section artist-section-2">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Dense &amp; Pika</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-dense-pika"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-dense-pika img-sm"></div>
+        </a>
+      </div>
+      <div class="artist-section artist-section-3">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Joris Voom</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-joris-voom"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-joris-voom img-sm"></div>
+        </a>
+      </div>
+      <div class="artist-section artist-section-1">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Layton Giordani</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-layton-giordani"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-layton-giordani img-sm"></div>
+        </a>
+      </div>
+      <div class="artist-section artist-section-4">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Luciid</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-luciid"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-luciid img-sm"></div>
+        </a>
+      </div>
+      <div class="artist-section artist-section-2">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Luigi Madonna</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-luigi-madonna"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-luigi-madonna img-sm"></div>
+        </a>
+      </div>
+      <div class="artist-section artist-section-1">
+        <a href="#!">
+          <div class="artist-section__title">
+            <div class="artist-section__title-dot"></div>
+            <h3 class="artist-section__title-name">Will Atkinson</h3>
+          </div> 
+          <div class="artist-section__img artist-section__img-lg img-lg-will-atkinson"></div>
+          <div class="artist-section__img artist-section__img-sm img-sm-will-atkinson img-sm"></div>
+        </a>
+      </div>
     </main>
+    <footer class="footer home-page__footer">
+      <nav>
+        <a href="#!">
+          <p class="footer__contact">Contact Us</p>
+          <p class="footer__contact-email">hello@wearebigfoot.com</p>
+        </a>
+      </nav>
+    </footer>
   </body>
 </html>
