--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
+  <body class="main-page__body">
     <header class="header home-page__header">
       <a href="https://wearebigfoot.com">
         <div class="header__logo">
@@ -23,70 +23,49 @@
     <main class="home-page__main">
       <div class="artist-section artist-section-1">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Adam Beyer</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Adam Beyer</h3>
           <div class="artist-section__img artist-section__img-lg img-lg-adam-beyer"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-adam-beyer img-sm"></div>
         </a>
       </div>
       <div class="artist-section artist-section-2">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Dense &amp; Pika</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Dense &amp; Pika</h3>
           <div class="artist-section__img artist-section__img-lg img-lg-dense-pika"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-dense-pika img-sm"></div>
         </a>
       </div>
       <div class="artist-section artist-section-3">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Joris Voom</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Joris Voom</h3>
           <div class="artist-section__img artist-section__img-lg img-lg-joris-voom"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-joris-voom img-sm"></div>
         </a>
       </div>
       <div class="artist-section artist-section-1">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Layton Giordani</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Layton Giordani</h3> 
           <div class="artist-section__img artist-section__img-lg img-lg-layton-giordani"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-layton-giordani img-sm"></div>
         </a>
       </div>
       <div class="artist-section artist-section-4">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Luciid</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Luciid</h3>
           <div class="artist-section__img artist-section__img-lg img-lg-luciid"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-luciid img-sm"></div>
         </a>
       </div>
       <div class="artist-section artist-section-2">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Luigi Madonna</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Luigi Madonna</h3>
           <div class="artist-section__img artist-section__img-lg img-lg-luigi-madonna"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-luigi-madonna img-sm"></div>
         </a>
       </div>
       <div class="artist-section artist-section-1">
         <a href="#!">
-          <div class="artist-section__title">
-            <div class="artist-section__title-dot"></div>
-            <h3 class="artist-section__title-name">Will Atkinson</h3>
-          </div> 
+          <h3 class="artist-section__title-name">Will Atkinson</h3>
           <div class="artist-section__img artist-section__img-lg img-lg-will-atkinson"></div>
           <div class="artist-section__img artist-section__img-sm img-sm-will-atkinson img-sm"></div>
         </a>
