--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body class="main-page__body">
+  <body class="home-page__body">
     <header class="header home-page__header">
       <a href="https://wearebigfoot.com">
         <div class="header__logo">
