--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </a>
       </div>
     </main>
-    <footer class="footer home-page__footer">
+    <footer class="footer">
       <nav>
         <a href="#!">
           <p class="footer__contact">Contact Us</p>
